fix pos element header

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -5,12 +5,8 @@
 }
 
 .button-primary {
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    bottom: 0%;
-    width: 180px;
-    height: 64px;   
+    width: 18rem;
+    height: 6.4rem;   
     
     /* color/dark */
     border: 0px;
@@ -24,10 +20,8 @@
     .Recent-Works {
         font-weight: bold;
         font-size: 1.8rem;
-        height: 24px;
         left: 24.44%;
         right: 24.44%;
-        top: calc(50% - 24px/2);
         color: #FFFFFF;
     }
 }
@@ -40,11 +34,10 @@
     background-image: url('../images/HeaderBg.svg');
     
     .Navigation {
-
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 64px 72px 0px;
+        padding: 6.4rem 7.2rem 0px;
 
         .Nav__logo {
             padding: 12px 0px;
@@ -55,17 +48,14 @@
             justify-content: space-between;
             align-items: center;
             position: relative;
-            width: 392px;
-            height: 24px;
             padding: 0;
             margin: 0;
-            font-style: normal;
             font-weight: 600;
     
             .Nav__menu-item {   
                 list-style: none;
-                left: 876px;
-                top: 84px;
+                line-height: 2.5rem;
+                padding: 1.5rem 3.2rem;
                 &:hover {
                     cursor: pointer;
                 }
@@ -75,41 +65,40 @@
                 color: #5468E7;
             }
             
-        }
-        .Nav__notify {
-            position: absolute;
-            left: 63%;
-            top: 74px;
-            padding: 3px 8px;
-            border-radius: 10px;
-            font-size: 1.4rem;
-            line-height: 1.4rem;
-            color: var(--white);
-            background: linear-gradient(180deg, #3A8FFF 0%, #0837AE 100%);
+            .Nav__notify {
+                position: absolute;
+                right: 0;
+                top: 0;
+                padding: 3px 8px;
+                border-radius: 10px;
+                font-size: 1.4rem;
+                line-height: 1.4rem;
+                color: var(--white);
+                background: linear-gradient(180deg, #3A8FFF 0%, #0837AE 100%);
+            }
         }
         
     }
 
     .Header__Container {
         position: relative;
-        margin: 94px 135px; 
-        max-height: 100%;
+        padding: 94px 135px; 
+        height: 100%;
         display: flex;
 
         .Header__HeroImg {
             position: absolute;
-            top: 10%;
-            right: 0;
-            height: auto;
-            width: auto;
+            top: 15.5rem;
+            right: calc(var(--distancePrimary) - 2.5rem);
+            width: 64%;
+            height: 64%;
         }
         .Header__HeroBG {
             position: absolute;
-            top: 0;
-            right: 0;
-            height: auto;
-            width: auto;
-            
+            top: 9.4rem;
+            right: var(--distancePrimary);
+            width: 40%;
+            height: 70%; 
         }
         .Header__HeroContent {
             width: 467px;
@@ -138,7 +127,7 @@
                     width: 367px;
                     text-align: start;
                     font-weight: 400;
-                    margin: 40px 0;
+                    margin: 40px 0 48px;
                     font-size: 18px;
                     line-height: 32px;
                     color: #606060;
@@ -154,8 +143,8 @@
         }
         .Header__ScrollDownIcon {
             position: absolute;
-            bottom: calc(-90px * 2);
-            left: 0;
+            top: 75%;
+            left: var(--distancePrimary);
             height: auto;
             width: auto;
             vertical-align: bottom;
