--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,6 +5,8 @@
     --white: #fff;
     --colorText: #8B8B8B;
     --heightHeader: 1024px;
+    --heightWhoWeAre: 1710px;
+    --distancePrimary: 13.5rem;
 }
 
 * {
@@ -20,7 +22,7 @@ html {
 
 body {
     font-family: 'SF Pro Display', sans-serif;                                  
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     line-height: 1.4rem;
     text-rendering: optimizeSpeed;
     text-align: center;
