--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -76,6 +76,9 @@
             top: 0;
             left: 0;
         }
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
 
@@ -349,8 +352,9 @@
 .Services {
     width: 100%;
     height: var(--heightServices);
+    background-color: var(--white);
     background-image: url('../images/ServicesBg.svg');
-    background-color: #fff;
+    background-color: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289), 100%);
     .Headline {
         .Headline__content {
             .Headline__content__tagline, .taglineContent {
@@ -358,6 +362,43 @@
             }
             .Headline__content__para {
                 color:#232340;
+            }
+        }
+    }
+    .Services__Card {
+        display: flex;
+        background-color: var(--white);
+        border: 3px solid #FFFFFF;
+        border-radius: 48px;
+        box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
+        justify-content: space-around;
+        margin-top: 14rem;
+        .Services__Card_Box {
+            display: flex;
+            flex-direction: column;
+            // align-items: center;
+            border-radius: 48px;
+            padding: 14rem 5.6rem;
+            background-color: var(--white);
+            
+            .Services__Card__name {
+                margin: 0;
+                margin-top: 4rem;
+                color: #5468E7;
+            }
+            &:hover:not(.Services__Card__Current) {
+                cursor: pointer;
+                background-color: #838FDD;
+            }
+        }
+        .Services__Card__Current {
+            border-radius: 48px ;
+            background: #5468E7;
+            box-sizing: content-box;
+            .Services__Card__name {
+                margin: 0;
+                margin-top: 3.3rem;
+                color: #FFFFFF;
             }
         }
     }
