Finish Desktop-Full Page

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -10,6 +10,8 @@
     --black: #000;
     --heightServices: 2124px;
     --primaryColor: #5468E7;
+    --heightWorks: 3232px;
+    --heightCTA: 976px;
 }
 
 * {
