--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -53,11 +53,14 @@
     justify-content: space-between;
     padding-top: 12.8rem;
     .Headline__logo {
+        padding: 6px;
         width: auto;
         height: auto;
         top: 0;
         left: 0;
         align-self: flex-start;
+        background-color: var(--primaryColor);
+        border-radius: 8px;
     }
     .Headline__content {
         display: flex;
@@ -103,12 +106,64 @@
     }
 }
 
+.Works__PortFolio {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
+    .PortFolio__title {
+        text-align: left;
+        font-weight: 700;
+        font-size: 4rem;
+        line-height: 4.8rem;
+        /* identical to box height, or 120% */
+
+        letter-spacing: -0.4px;
+
+        /* color/dark */
+
+        color: #232340;
+    }
+    .PortFolio__Box {
+        position: relative;
+        width: 37rem;
+        height: 38rem;
+        background: #E8BEFF;
+        border-radius: 24px;
+        .PortFolio__Box__img {
+            position: absolute;
+            bottom: -8.6rem;
+            right: -4.4rem;
+            width: auto;
+            height: auto;
+        }
+        .PortFolio__Box__Arrow {
+            position: absolute;
+            bottom: 3.2rem;
+            right: -3.2rem;
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
+    .PortFolio__content {
+        text-align: left;
+        width: 37rem;   
+        font-weight: 400;
+        font-size: 1.8rem;
+        line-height: 3.2rem;
+        color: #606060;
+    }
+}
+
 .Header {
     width: 100%;
-    height: var(--heightHeader);
+    // height: var(--heightHeader);
     left: 0px;
     top: 0px;
     background-image: url('../images/HeaderBg.svg');
+    padding-bottom: 25rem;
     
     .Navigation {
         display: flex;
@@ -238,10 +293,11 @@
 .WhoWeAre {
     position: relative;
     width: 100%;
-    height: var(--heightWhoWeAre);
+    // height: var(--heightWhoWeAre);
     background: #232340;
     background-image: url('../images/line.svg');
     background-repeat: no-repeat;
+    padding-bottom: 25rem;
 
     .WhoWeAre__shape3d {
         width: 100%;
@@ -352,10 +408,11 @@
 
 .Services {
     width: 100%;
-    height: var(--heightServices);
+    // height: var(--heightServices);
     background-color: var(--white);
     background-image: url('../images/ServicesBg.svg');
     background-color: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289), 100%);
+    padding-bottom: 25rem;
     .Headline {
         .Headline__content {
             .Headline__content__tagline, .taglineContent {
@@ -395,7 +452,7 @@
         .Services__Card__Current {
             border-radius: 48px ;
             background: var(--primaryColor);
-            box-sizing: content-box;
+            align-self: stretch;
             .Services__Card__name {
                 margin: 0;
                 margin-top: 3.3rem;
@@ -464,6 +521,429 @@
                 }
                 .Number__content {
                     color: var(--black)
+                }
+            }
+        }
+    }
+}
+
+.Works {
+    width: 100%;
+    // height: var(--heightWorks);
+    background-color: var(--white);
+    background-image: url('../images/lines.svg');
+    padding-bottom: 12rem;
+    .Headline {
+        padding: 0;
+        .Headline__content {
+            margin-left: 18rem;
+            .Headline__content__tagline, .taglineContent {
+                color:var(--primaryColor);
+            }
+            .Headline__content__para {
+                color:#232340;
+                font-weight: 700;
+                font-size: 8.4rem;
+                line-height: 10rem;
+                letter-spacing: -1px;
+            }
+            .Work__Headline__content {
+                text-align: left;
+                line-height: 3.2rem;
+                width: 60%;
+                margin-top: 4rem;
+            }
+        }
+    }
+    .Works__featuredWork {
+        width: 100%;
+        position: relative;
+        .featuredWorkIMG {
+            position: absolute;
+            width: auto;
+            height: auto;
+            top: -12rem;
+            left: -13.5rem;
+        }
+        .Works__featuredWork__main {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            padding-top: 22rem;
+            .featuredWork__main__feature {
+                font-size: 1.4rem;
+                line-height: 1.8rem;
+                color: #FFFFFF;
+                padding: 11px 22px;
+                border-radius: 20px;
+                background-color: #908CFF;
+            }
+            .featuredWork__main__content {
+                display: flex;
+                flex-direction: column;
+                width: 40%;
+                align-items: flex-start;
+                text-align: left;
+                .featuredWork__main__content__title {
+                    margin: 24px 0;
+                    font-weight: 700;
+                    font-size: 40px;
+                    line-height: 48px;
+                    /* or 120% */
+                    color: #000;
+                    letter-spacing: -0.4px;
+                }
+                .featuredWork__main__content__para {
+                    margin-top: 8px;
+                    line-height: 3.2rem;
+                    font-weight: 400;
+                    width: 45%;
+                }
+            }
+        }
+    }
+    .Works__PortFolio__Box {
+        // position: relative;
+        display: flex;
+        flex-direction: column;
+        padding-top: 25rem;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        .Works__PortFolio__Right {
+            align-self: flex-end;
+        }
+        .Works__PortFolio2 {
+            // position: absolute;
+            // top: 70rem;
+            margin-top: -35rem;
+            align-self: flex-start;
+            .PortFolio__Box {
+                width: 47rem;
+                height: 50rem;
+                background: #FFCE79;
+                .PortFolio__Box__img {
+                    top: 2.5rem;
+                    left: -8rem
+                }
+            }
+        }
+        .Works__PortFolio3 {
+            margin-top: -2rem;
+            margin-right: 10rem;
+            .PortFolio__Box {
+                width: 47rem;
+                height: 51rem;
+                background: #D1ECFD;
+                .PortFolio__Box__img {
+                    top: 3.5rem;
+                    left: -10rem
+                }
+            }
+        }
+        .Works__PortFolio4 {
+            margin-top: -50rem;
+            margin-left: 10rem;
+            .PortFolio__Box {
+                width: 36.6rem;
+                height: 51rem;
+                background: #FFADD0;
+                .PortFolio__Box__img {
+                    bottom: 6.6rem;
+                    left: 0;
+                }
+            }
+        }
+    }
+}
+
+.CTA {
+    width: 100%;
+    // height: var(--heightCTA);
+    background-color: var(--white);
+    background-image: url('../images/CTABg.svg');
+    background-repeat: no-repeat;
+    background-position: center top;
+    position: relative;
+    padding-bottom: 30rem;
+    .CTA__maskImg {
+        position: absolute;
+        height: 64%;
+        top: 4.8rem;
+        right: 7.2rem;
+    }
+    .CTA__phoneImg {
+        position: absolute;
+        top: 0;
+        left: var(--distancePrimary);
+    }
+    .CTAContent {
+        position: relative;
+        margin: 0 20rem 0 23.5rem;
+        .Headline__logo {
+            background-color: #C897E4;
+        }
+        .Headline__content {
+            margin-right: 12rem;
+            .Headline__content__para {
+                width: 37rem;
+            }
+            .button-primary {
+                margin-top: 5rem;
+                background-color: var(--white);
+                .Recent-Works {
+                    color: var(--primaryColor);
+                }
+            }
+        }
+    }
+}
+
+.Job {
+    width: 100%;
+    background-color: var(--white);
+    background-image: url('../images/ServicesBg.svg');
+    background-color: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289), 100%);
+    padding-bottom: 10rem;
+    .grid {
+        display: flex;
+        justify-content: space-between;
+        .Headline__content__tagline {
+            color: var(--primaryColor);
+            .taglineContent {
+                color: var(--primaryColor);
+            }
+        }
+        .Headline {
+            .Headline__content {
+                margin-right: 10rem;
+                .Headline__content__para {
+                    width: 45rem;
+                    color: #232340;
+                    font-weight: 700;
+                    font-size: 11rem;
+                    line-height: 13rem;
+                    letter-spacing: -1.2px;
+                }
+                .Work__Headline__content {
+                    text-align: left;
+                    line-height: 3.2rem;
+                    width: 37rem;
+                }
+                .ScrollDown {
+                    margin-top: 5rem;
+                    display: flex;
+                    align-items: center;
+                    span {
+                        margin-left: 1.5rem;
+                    }
+                }
+            }
+        }
+        .JobsCard {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin-top: 12.8rem;
+            .JobCard__Box {
+                background-color: #FFFFFF;
+                border-radius: 40px;
+                margin-bottom: 2rem;
+                box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+                justify-content: space-between;
+                align-items: center;
+                .JobCard__content {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: flex-start;
+                    padding: 6.4rem 15rem 6.4rem 6.4rem;
+                    .JobName {
+                        width: 25rem;
+                        margin: 0;
+                        font-weight: 700;
+                        font-size: 32px;
+                        line-height: 40px;
+                        letter-spacing: -0.5px;
+                        color: #232340;
+                        text-align: left;
+                        position: relative;
+                        // &:after {
+                        //     content: '2';
+                        //     position: absolute;
+                        //     padding: 8px 16px;
+                        //     background: linear-gradient(180deg, #3A8FFF 0%, #0837AE 100%);
+                        //     top: 0;
+                        //     right: -5rem;
+                        //     font-size: 1.4rem;
+                        //     line-height: 1.8rem;
+                        //     border-radius: 20px;
+                        // }
+                    }
+                    .YearExperienceJob {
+                        text-align: left;
+                        margin-top: 2rem;
+                    }
+                }
+            }
+            .JobCard__Box__Current {
+                background: #232340;
+                .JobCard__content {
+                    .JobName {
+                        color: var(--white);
+                    }
+                }
+            }
+        }
+    }
+}
+
+.Footer {
+    width: 100%;
+    background-color: var(--white);
+    background-image: url('../images/ServicesBg.svg');
+    background-color: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289), 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .Footer__Contact {
+        display: flex;
+        flex-direction: column;
+        border-radius: 40px;
+        background-color: var(--primaryColor);
+        .Footer__Contact__Top {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 11rem 35rem;
+            color: #FFFFFF;
+            justify-content: space-around;
+            .Headline__logo {
+                padding: 2px;
+                width: auto;
+                height: auto;
+                top: 0;
+                left: 0;
+                background-color: #C897E4;
+                border-radius: 8px;
+                margin-bottom: 2rem;
+            }
+            h2 {
+                font-weight: 700;
+                font-size: 3.2rem;
+                line-height: 4rem;
+                text-align: center;
+                letter-spacing: -0.5px;
+                max-width: 57rem;
+            }
+        }
+        .Footer__Contact__Bottom {
+            display: flex;
+            justify-content: space-around;
+            color: #FFFFFF;
+            padding: 17rem 0;
+            .Footer__Contact__BottomLeft {
+                font-weight: 700;
+                font-size: 64px;
+                line-height: 72px;
+                letter-spacing: -0.5px;
+                max-width: 37rem;
+                text-align: left;
+            }
+            .Footer__Contact__BottomRight {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                p {
+                    font-weight: 700;
+                    font-size: 3.2rem;
+                    line-height: 4rem;
+                    letter-spacing: -0.5px;
+                    max-width: 37rem;
+                    text-align: left;
+                }
+            }
+        }
+    }
+    .Footer__Content {
+        .grid {
+            display: flex;
+            flex-direction: column;
+            .Footer__Content__Top {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin-top: 12.8rem;
+                .Footer__Content__Top__para {
+                    max-width: 56rem;
+                    font-weight: 400;
+                    font-size: 1.8rem;
+                    line-height: 3.2rem;
+                    text-align: center;
+                    margin: 5rem 0;
+                }
+                .Nav__menu {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 0;
+                    margin: 0;
+                    font-weight: 600;
+                    .Nav__menu-item {   
+                        list-style: none;
+                        line-height: 2.5rem;
+                        margin: 0 3.2rem 5rem;
+                        &:hover {
+                            cursor: pointer;
+                        }
+                        &:first-child {
+                            color: var(--primaryColor);
+                        }
+                    }
+                }
+            }
+            .Footer__Content__Social {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 3.2rem 0;
+                position: relative;
+                .Footer__Content__Social__Left {
+                    font-weight: 600;
+                    font-size: 1.4rem;
+                    line-height: 1.8rem;
+                    color: #ADADAD;
+                }
+                .Footer__Content__Social__Right {
+                    display: flex;
+                    justify-content: space-between;
+                    span {
+                        font-weight: 600;
+                        font-size: 1.4rem;
+                        line-height: 1.8rem;
+                        color: var(--primaryColor);
+                    }
+                    .Social__ListIcon {
+                        padding: 0;
+                        margin: 0;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        .Social__Icon {
+                            list-style: none;
+                            margin-left: 4rem;
+                        }
+                    }
+                }
+                &:after {
+                    content: '';
+                    position: absolute;
+                    display: block;
+                    width: 100%;
+                    height: 1px;
+                    background: #D8D8D8;
+                    top: 0;
+                    left: 0;
                 }
             }
         }
