--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -818,6 +818,7 @@
             padding: 11rem 35rem;
             color: #FFFFFF;
             justify-content: space-around;
+            position: relative;
             .Headline__logo {
                 padding: 2px;
                 width: auto;
@@ -836,12 +837,25 @@
                 letter-spacing: -0.5px;
                 max-width: 57rem;
             }
+            &:after {
+                content: '';
+                position: absolute;
+                display: block;
+                width: 100%;
+                height: 1px;
+                mix-blend-mode: normal;
+                opacity: 0.2;
+                border: 1px solid #FFFFFF;
+                bottom: 0;
+                left: 0;
+            }
         }
         .Footer__Contact__Bottom {
             display: flex;
             justify-content: space-around;
             color: #FFFFFF;
             padding: 17rem 0;
+            position: relative;
             .Footer__Contact__BottomLeft {
                 font-weight: 700;
                 font-size: 64px;
@@ -862,6 +876,18 @@
                     max-width: 37rem;
                     text-align: left;
                 }
+            }
+            &:after {
+                content: '';
+                position: absolute;
+                display: block;
+                width: 1px;
+                height: 100%;
+                mix-blend-mode: normal;
+                opacity: 0.2;
+                border: 1px solid #FFFFFF;
+                top: 0;
+                left: 50%;
             }
         }
     }
