--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -34,7 +34,124 @@ body {
 }
 
 .grid {
-    width: 1170px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 1170px;
     margin:0 auto;
+}
+
+.button-primary {
+    width: 18rem;
+    height: 6.4rem;   
+    /* color/dark */
+    border: 0px;
+    background: var(--primaryColor);
+    border-radius: 8px;
+
+    &:hover {
+        background: #7483e5;
+        cursor: pointer;
+    }
+    .Recent-Works {
+        font-weight: bold;
+        font-size: 1.8rem;
+        left: 24.44%;
+        right: 24.44%;
+        color: #FFFFFF;
+    }
+}
+
+.Number {
+    padding: 8rem;
+    .Number__head {
+        margin: 0;
+        font-size: 20rem;
+        line-height: 18rem;
+        text-align: center;
+        color: #FFFFFF;
+    }
+    .Number__content {
+        margin: 0;
+        font-size: 2.4rem;
+        line-height: 3rem;
+        font-style: normal;
+        font-weight: 700;
+        text-align: center;
+        letter-spacing: -0.2px;
+        color: #FFFFFF;
+    }
+}
+
+.Headline {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 12.8rem;
+    .Headline__logo {
+        padding: 6px;
+        width: auto;
+        height: auto;
+        top: 0;
+        left: 0;
+        align-self: flex-start;
+        background-color: var(--primaryColor);
+        border-radius: 8px;
+    }
+    .Headline__content {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        .Headline__content__tagline {
+            font-weight: 600;
+            line-height: 2.4rem;
+            font-style: normal;
+            margin-bottom: 2.4rem;
+            color: var(--primaryColor);
+            .taglineContent {
+                margin-left: 2.4rem;
+            }
+        }
+        .Headline__content__para {
+            font-weight: 700;
+            font-size: 6.4rem;
+            line-height: 7.2rem;
+            /* or 112% */
+            margin: 0;
+            letter-spacing: -0.5px;
+            
+            /* color/white */
+            
+            color: #FFFFFF;
+            width: 66rem;
+            text-align: left;
+        }
+    }
+    .Headline__Arrow {
+        margin-top: 5.4rem;
+        img {
+            width: auto;
+            height: auto;
+            top: 0;
+            left: 0;
+        }
+        &:hover {
+            cursor: pointer;
+        }
+    }
+}
+
+/* Responsive */
+/*Tablet*/
+@media (min-width: 740px) and  (max-width: 1024px) {
+    html {
+        font-size: 50%;
+    }
+    // .grid {
+    //     max-width: 810px;
+    // }
+}
+/*Mobile*/
+@media (min-width: 0) and (max-width: 739px) {
+
 }
