Fix css style in some section for Huy.

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -147,9 +147,9 @@ body {
     html {
         font-size: 50%;
     }
-    // .grid {
-    //     max-width: 810px;
-    // }
+    .grid {
+        max-width: 810px;
+    }
 }
 /*Mobile*/
 @media (min-width: 0) and (max-width: 739px) {
