--- a/src/components/Works/styleWorks.scss
+++ b/src/components/Works/styleWorks.scss
@@ -165,6 +165,7 @@
         flex-wrap: wrap;
 
         .Works__PortFolio__Right {
+            margin-right:3.2rem;
             align-self: flex-end;
             .PortFolio__Box {
                 justify-content: flex-end;
