--- a/src/components/Footer/styleFooter.scss
+++ b/src/components/Footer/styleFooter.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     .Footer__Contact {
+        width: 100%;
         display: flex;
         flex-direction: column;
         border-radius: 40px;
@@ -15,7 +16,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 11rem 35rem;
+            padding: 11rem 0;
             color: #FFFFFF;
             justify-content: space-around;
             position: relative;
@@ -35,7 +36,7 @@
                 line-height: 4rem;
                 text-align: center;
                 letter-spacing: -0.5px;
-                max-width: 57rem;
+                max-width: 20rem;
             }
             &:after {
                 content: '';
