--- a/src/components/CTA/styleCTA.scss
+++ b/src/components/CTA/styleCTA.scss
@@ -55,3 +55,107 @@
         }
     }
 }
+
+
+@media (min-width: 1025px) and (max-width: 1250px) {
+    .CTA {
+        .CTA__maskImg {
+            top: 24.5rem;
+        }
+        .CTA__phoneImg {
+            top: 24.5rem;
+            left: 13rem;
+        }
+        .CTAContent {
+            .Headline {
+                .Headline__content {
+                    margin-right: -1.5rem;
+                }
+            }
+        }
+
+    }
+}
+
+@media (min-width: 850px) and  (max-width: 1024px) {
+    .CTA {
+        .CTA__maskImg {
+            top: 22.5rem;
+        }
+        .CTA__phoneImg {
+            top: 21.5rem;
+            left: 17rem;
+        }
+        .CTAContent {
+            .Headline {
+                .Headline__content {
+                    margin-right: 3.5rem;
+                }
+            }
+        }
+
+    }
+}
+
+
+@media (min-width: 740px) and  (max-width: 849px) {
+    .CTA {
+        .CTA__maskImg {
+            top: 24.5rem;
+        }
+        .CTA__phoneImg {
+            top: 24.5rem;
+            left: 15rem;
+        }
+        .CTAContent {
+            .Headline {
+                .Headline__content {
+                    margin-right: -2.5rem;
+                }
+            }
+        }
+
+    }
+}
+
+/*Mobile*/
+@media (min-width: 0) and (max-width: 739px) {
+    .CTA {
+        margin: 30% 0;
+        background-size: contain;
+        padding: unset;
+        .CTA__maskImg {
+            right: 0;
+            top: 3%;
+        }
+        .CTA__phoneImg {
+            top: 3%;
+            left: 10%;
+        }
+        .CTAContent {
+            margin: 0;
+            padding-left: 40%;
+            .Headline {
+                padding: 0;
+                justify-content: flex-end;
+                .Headline__logo {
+                    display: none;
+                }
+                .Headline__content {
+                    margin: 0;
+                    align-items: flex-start;
+                    .Headline__content__tagline {
+                        margin: 0;
+                    }
+                    .Headline__content__para {
+                        width: 213px;
+                    }
+                    .button-primary {
+                        width: 15rem;
+                        margin-top: 0;
+                    }
+                }
+                }
+        }
+    }
+}
