--- a/src/components/WhoWeAre/styleWhoWeAre.scss
+++ b/src/components/WhoWeAre/styleWhoWeAre.scss
@@ -28,6 +28,12 @@
         .taglineContent {
             color: #FFFFFF;
         }
+        .CurrentYearMobile {
+            display: none;
+        }
+        .DownIconMobile {
+            display: none;
+        }
         .WhoWeAre__body {
             width: 100%;
             margin-top: 9.4rem;
@@ -120,6 +126,42 @@
                 height: 80px;
                 background: #F1B2CC;
                 border-radius: 1px;
+            }
+        }
+    }
+}
+
+/*Mobile*/
+@media (min-width: 0) and (max-width: 739px) {
+    .WhoWeAre {
+        .WhoWeAre__shape3d {
+            .shape3dIMG {
+                display: none;
+            }
+            .WhoWeAre__body {
+                margin-bottom: 56px;
+                .WhoWeAre__body__timeLine {
+                    display: none;
+                }
+                .WhoWeAre__body__img {
+                    width: 100%;
+                }
+            }
+            .WhoWeAre__footer {
+                flex-direction: column;
+                align-items: flex-start;
+                .WhoWeAre__footer__content {
+                    padding: 0;
+                    &:after {
+                        display: none;
+                    }
+                }
+                .Number {
+                    align-self: center;
+                    border-radius: 260px;
+                    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1);
+                    margin-top: 50px;
+                }
             }
         }
     }
